--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "functions": {
-        "api/php.php": {
-            "runtime": "vercel-php"
+        "api/*.php": {
+            "runtime": "vercel-php@0.5.1"
         }
     }
 }
