--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,13 @@
 {
-    "functions": {
-        "api/*.php": {
-            "runtime": "vercel-php@0.5.1"
+    "headers": [
+        {
+            "source": "/svg/(.*)",
+            "headers": [
+                {
+                    "key": "Content-Type",
+                    "value": "image/svg+xml"
+                }
+            ]
         }
-    }
+    ]
 }
